--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'com.github.tiedmud:Custom-Calendar-View:1.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.itextpdf:itext7-core:7.1.8'
     //face api
     implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly-debug-SNAPSHOT'
     implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
