--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.itextpdf:itext7-core:7.1.8'
+    //qr code
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
     //face api
     implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly-debug-SNAPSHOT'
     implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
