--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.itextpdf:itext7-core:7.1.8'
     //qr code
+    implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
     implementation 'com.google.mlkit:barcode-scanning:17.1.0'
     //face api
@@ -67,11 +68,4 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
     implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
     implementation 'com.google.mlkit:face-detection:16.0.0'
-    //cameraX
-    implementation "androidx.camera:camera-core:1.1.0-beta02"
-    implementation "androidx.camera:camera-camera2:1.1.0-beta02"
-    implementation "androidx.camera:camera-lifecycle:1.1.0-beta02"
-    implementation "androidx.camera:camera-video:1.1.0-beta02"
-    implementation "androidx.camera:camera-view:1.1.0-beta02"
-    implementation "androidx.camera:camera-extensions:1.1.0-beta02"
 }
