get location - but not incomplete address - need fix

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,6 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.tiedmud:Custom-Calendar-View:1.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-    implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.itextpdf:itext7-core:7.1.8'
     //qr code
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
@@ -67,5 +66,7 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly-debug-SNAPSHOT'
     implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
     implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
-    implementation 'com.google.mlkit:face-detection:16.0.0'
+    implementation 'com.google.mlkit:face-detection:16.1.5'
+    //location
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 }
