--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
+        maven { url 'https://jitpack.io'}
+        maven { url "https://maven.google.com" }
     }
 }
 rootProject.name = "Attendace App"
